--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "Nzg0MzAzNzU2OTI1NDY4NzEz.X8nVyw.zpb11bAyFrQgh6B_INsVs1S38SY",
+  "TOKEN": "",
   "PREFIX": "^",
   "approveemoji": "769665713124016128",
   "denyemoji": "770326304473350145",
